--- a/index.ipynb
+++ b/index.ipynb
@@ -7,23 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from hello_nbdev.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Welcome to hello_nbdev\n",
     "\n",
-    "> Summary description here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "> Tutorial on nbdev."
    ]
   },
   {
@@ -37,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install hello_nbdev`"
    ]
   },
   {
@@ -51,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Let us show how to use a module from hello_nbdev:"
    ]
   },
   {
@@ -62,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Alberto!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +64,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello('Alberto')"
    ]
   },
   {
