--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -167,6 +167,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "from nbdev.export import notebook2script; notebook2script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
